# jarvis-test

./: .env.example  agent_jarvis.py  pyproject.toml  server.py
jarvis/: __init__.py  config.py
jarvis/prompts/: __init__.py
jarvis/resources/: __init__.py  data.py
jarvis/tools/: __init__.py  web.py
