[project]
name = "jarvis"
version = "0.1.0"
description = "Jarvis — Tony Stark assistant"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==2.8.0",
    "httpx",
    "livekit-agents==1.2.0",
    "livekit-plugins-google",
    "python-dotenv",
]

[project.scripts]
jarvis = "server:main"
jarvis_voice = "agent_jarvis:dev" # Points to the wrapper

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
